--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,22 @@ table.jtable{
 	background-color: #6DD900;
 }
 
+#orders_search {
+	border: 1px #BBB solid;
+	background: white;
+	margin: 0px 20px 20px 20px;
+	max-height: 400px;
+	overflow-y: scroll;
+}
+
+#orders_search table {
+	margin: 0;
+}
+
+#orders_search table tr td.activetd {
+	background-color: #6DD900;
+}
+
 .admin-people{
 	height:800px;
 	overflow-y: auto;
@@ -158,4 +174,17 @@ table.jtable{
 
 #logo {
     margin-bottom: 15px;
+}
+
+#top-menu-wrapper {
+    width: 510px;
+    float: right;
+}
+
+#ajax_load_1 {
+    text-align: center;
+    margin-top: 10px;
+    float: right;
+    width: 100%;
+    display: none;
 }
